<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Median Price</string>
    <string name="action_settings">Settings</string>
	<string name="txtBrand">Brand:</string>
	<string name="txtYearFrom">Year from:</string>
	<string name="txtYearTo">Year to:</string>
	<string name="btnMedian">Get Median</string>
	<string name="txtMedian">$0.00</string> 
	<string name="txtYear">2013</string>
    
</resources>
